k8s/keybuzz-backend-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keybuzz-backend-dev
  labels:
    app.kubernetes.io/part-of: keybuzz
    environment: dev
