k8s/keybuzz-backend-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keybuzz-backend
  namespace: keybuzz-backend-dev
  labels:
    app: keybuzz-backend
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: keybuzz-backend
